# VIO

./: README.md
Exercise/L1/L10_code/: CMakeLists.txt
Exercise/L1/L10_code/OUTPUT/: quaternion_lie_algebra_update
Exercise/L2/L11_code/: imu.cpp
Exercise/L2/course2_hw_new/vio_data_simulation/src/: param.h
Exercise/L3/CurveFitting_LM/: CMakeLists.txt
Exercise/L3/CurveFitting_LM/app/: CurveFitting.cpp
Exercise/L3/CurveFitting_LM/backend/: problem.cc  problem.h
Exercise/L3/pangolin_test/: CMakeLists.txt  pangolin_test.cpp
Exercise/L5/hw_course5/: CMakeLists.txt
Exercise/L5/hw_course5/backend/: CMakeLists.txt  problem.h  vertex_pose.cc
Exercise/L6/course6_hw/: data.txt
L1/L10_code/: quaternion_lie_algebra_update.cpp
L2/course2_hw_new/vio_data_simulation/src/: imu.cpp
L3/CurveFitting_LM/backend/: CMakeLists.txt
L4/course4/nullspace_test/: hessian_nullspace_test.cpp
L5/hw_course5/app/: CurveFitting.cpp  TestMonoBA.cpp
L5/hw_course5/backend/: edge.cc  edge_reprojection.cc  problem.cc
L6/course6_hw/: CMakeLists.txt  ReadMe.md  data_display.m  triangulate.cpp
dataset/: dataset_download.txt
